--- a/MODULO_1/UNIDAD_1_HTML_CSS/002_Estructura_HTML/solucion.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/002_Estructura_HTML/solucion.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-	<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="description" content="Ejercicio HTML - Corrige los errores">
-        <title>Corrige los errores que encuentres en el documento</title>
-		
-    </head>
+<html>
 
-    <body>
-			
-			
-        <h1>Aprender HTML es muy divertido</h1>
-		
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure  animi dicta velit</p>
-	   
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure  animi dicta velit</p>
-		  
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure  animi dicta velit</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Ejercicio HTML - Corrige los errores">
+    <title>Corrige los errores que encuentres en el documento</title>
 
-    </body>
-	</html>
+</head>
+
+<body>
+
+
+    <h1>Aprender HTML es muy divertido</h1>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta
+        velit</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta
+        velit</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta
+        velit</p>
+
+</body>
+
+</html>
