--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/011_Formularios_HTML/solucion.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/011_Formularios_HTML/solucion.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formularios</title>
 </head>
+
 <body>
-    <form>
+    <h1>Rellena el formulario</h1>
+    <form name="form" id="form" action="#">
         <fieldset>
             <Legend>Información personal:</Legend>
             <br>
             <label for="nombre">Indica tu nombre:</label>
-            <input type="text" id="nombre" required><br><br>
+            <input type="name" id="nombre" name="nombre" required><br><br>
             <label for="apellido">Indica tu apellido:</label>
-            <input type="text" id="apellido" required><br><br>
+            <input type="name" id="apellido" name="apellido" required><br><br>
             <label for="fecha_nacimiento">Fecha de nacimiento:</label>
-            <input type="date" id="fecha_nacimiento" required><br><br>
-
+            <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required><br><br>
+            <label for="genero">Género:</label>
+                <label for="femenino">Femenino</label>
+                <input type="radio" id="femenino" name="genero" value="Femenino" required>
+                <label for="masculino">Masculino</label>
+                <input type="radio" id="masculino" name="genero" value="Masculino" required>
+                <label for="otro">Otro</label>
+                <input type="radio" id="otro" name="genero" value="Otro" required>
         </fieldset>
-        <fieldset>
-            <legend>Género:</legend>
-                <br>
-                <label for="radio">Femenino</label>
-                <input type="radio" id="radio" name="genero" value="Femenino">
-                <label for="radio">Masculino</label>
-                <input type="radio" id="radio" name="genero" value="Masculino">
-                <label for="radio">Otro</label>
-                <input type="radio" id="radio" name="genero" value="Otro">
-            
-        </fieldset>
+        <br>
         <fieldset>
             <legend>Información de contacto:</legend>
             <br>
@@ -45,4 +44,5 @@
         <input type="button" value="Enviar">
     </form>
 </body>
+
 </html>
