sustitucion button submit

--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/011_Formularios_HTML/solucion.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/011_Formularios_HTML/solucion.html
@@ -41,7 +41,7 @@
             <textarea type="text" id="direccion" rows="3" cols="50"></textarea><br>
         </fieldset>
         <br>
-        <input type="button" value="Enviar">
+        <input type="submit" value="Enviar">
     </form>
 </body>
 
