--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/012_Incrustaciones_HTML/ejemplos_incrustar.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/012_Incrustaciones_HTML/ejemplos_incrustar.html
@@ -8,20 +8,36 @@
 </head>
 
 <body>
+
+    <h1>INCRUSTACIONES DE STAR WARS</h1>
+    <br>
+    <br>
+    <br>
     <!-- Incrustación de una imagen -->
-    <img src="/images/night_jedi.jpg" alt="Imagen de un Jedi nocturno">
+    <img src="images/night_jedi.jpg" alt="Imagen de un Jedi nocturno" width="640">
+    <br>
+    <br>
     <br>
     <!-- Incrustación de un video -->
-    <video src="/images/hiperespacio.mp4" controls></video>
+    <video src="images/hiperespacio.mp4" controls width="640" height="360"></video>
+    <br>
+    <br>
     <br>
     <!-- Incrustación de un audio -->
-    <audio src="/images/star-wars-style-march-165111.mp3" controls></audio>
+    <audio src="images/star-wars-style-march-165111.mp3" controls></audio>
+    <br>
+    <br>
     <br>
     <!-- Incrustación de una página web externa -->
-    <iframe src="https://ca.wikipedia.org/wiki/La_guerra_de_les_gal%C3%A0xies"></iframe>
+    <iframe src="https://ca.wikipedia.org/wiki/La_guerra_de_les_gal%C3%A0xies" width="640" height="640"></iframe>
+    <br>
+    <br>
     <br>
     <!-- Incrustación de un lienzo para dibujar gráficos -->
-    <canvas id="miCanvas" width="200" height="200"></canvas>
+    <canvas id="miCanvas" width="200" height="200">
+    </canvas>
+    <br>
+    <br>
     <br>
     <!-- Incrustación de gráficos vectoriales escalables -->
     <svg width="400" height="180">
