--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/012_Incrustaciones_HTML/ejemplos_incrustar.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/012_Incrustaciones_HTML/ejemplos_incrustar.html
@@ -34,7 +34,7 @@
     <br>
     <br>
     <!-- Incrustación de un lienzo para dibujar gráficos -->
-    <canvas id="miCanvas" width="200" height="200">
+    <canvas id="miCanvas" width="200" height="200" style="background-color: antiquewhite;">
     </canvas>
     <br>
     <br>
