--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/html5up-massively/index_solucion.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/html5up-massively/index_solucion.html
@@ -22,7 +22,7 @@
 						<h1 id="arriba">Prueba evaluable<br />
 						HTML</h1>
 						<p>Esta es una prueba evaluable diseñada por <a href="https://twitter.com/ajlkn">@ajlkn</a> para <a href="https://html5up.net">HTML5 UP,</a><br />
-						ejecutada por José López V. y facilitada de forma gratuita por <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						modificada por José López V. y facilitada de forma gratuita por <a href="https://html5up.net/license">Creative Commons license</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -62,7 +62,8 @@
                                          junto con l@s compañer@s, con la ayuda/supervisión del profesor y con un tiempo 
                                          de ejecución que finaliza el próximo lunes a las 10h.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/imagen_html.jpg" alt="" /></a>
+								<a href="#" class="image main"><video autoplay muted controls 
+									src="images/video_portada_codificacion.mp4"></video></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Visión Completa</a></li>
 								</ul>
@@ -132,7 +133,11 @@
 										<h2><a href="#">este es un<br />
 										video de youtube</a></h2>
 									</header>
-									<a href="#" class="image fit"><video autoplay muted controls src="https://youtu.be/FiUtHyZu0Eg?si=IPhYrgN2VOf0WpQn" ></video></a>
+									<a href="#" class="image fit"><iframe width="560" height="315" 
+										src="https://www.youtube.com/embed/FiUtHyZu0Eg?si=Jzjpl0C5tcleQPVo" 
+										title="YouTube video player" frameborder="0" 
+										allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+										referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></a>
 									<p>Esta es una prueba de html realizada durante la sesión del 14 de Junio del 2024,
                                         junto con l@s compañer@s, con la ayuda/supervisión del profesor y con un tiempo 
                                         de ejecución que finaliza el próximo lunes a las 10h.</p>
@@ -146,7 +151,8 @@
 										<h2><a href="#">Esta es una<br />
 										página web incrustada</a></h2>
 									</header>
-									<a href="#" class="image fit"><iframe src="https://ca.wikipedia.org/wiki/Hyper_Text_Markup_Language"></a>
+									<a href="#" class="image fit"><iframe src="https://ca.wikipedia.org/wiki/Hyper_Text_Markup_Language" 
+										widht="560" height="315"></iframe></a>
 									<p>Esta es una prueba de html realizada durante la sesión del 14 de Junio del 2024,
                                         junto con l@s compañer@s, con la ayuda/supervisión del profesor y con un tiempo 
                                         de ejecución que finaliza el próximo lunes a las 10h.</p>
@@ -167,7 +173,7 @@
 									<a href="#" class="page">8</a>
 									<a href="#" class="page">9</a>
 									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+									<a href="#" class="next">Siguiente</a>
 								</div>
 							</footer>
 
@@ -179,7 +185,7 @@
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
-										<label for="name">Name</label>
+										<label for="name">Nombre</label>
 										<input type="text" name="name" id="name" />
 									</div>
 									<div class="field">
@@ -187,7 +193,7 @@
 										<input type="text" name="email" id="email" />
 									</div>
 									<div class="field">
-										<label for="message">Message</label>
+										<label for="message">Mensaje</label>
 										<textarea name="message" id="message" rows="3"></textarea>
 									</div>
 								</div>
@@ -199,13 +205,13 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<h3>Dirección</h3>
+								<p>1234 Algun sitio #87257<br />
+								Barcelona, Bcn 08022</p>
 							</section>
 							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<h3>Teléfono</h3>
+								<p><a href="#">(34) 123 45 67 89</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
