--- a/MODULO_1/UNIDAD_1_HTML_CSS/CSS/009_responsive_flexbox/index.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/CSS/009_responsive_flexbox/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Responsive Flexbox</h1>
     <div class="galería">
         <img src="img/codigo.jpg">
         <img src="img/codigo.jpg">
