--- a/MODULO_1/UNIDAD_2_JS/007_bucle_for_sencillo/index.html
+++ b/MODULO_1/UNIDAD_2_JS/007_bucle_for_sencillo/index.html
@@ -11,5 +11,16 @@
         document.write(`Número: ${i}<br>`);
     }
     </script>
+    <br>
+    <br>
+    <br>
+    <script>//b) break
+        for (i = 0; i < 5; i++){
+        document.write(`Número: ${i}<br>`);
+        if (i === 2){
+            break;
+        }
+    }
+    </script>
 </body>
 </html>
