--- a/MODULO_1/UNIDAD_2_JS/007_bucle_for_sencillo/index.html
+++ b/MODULO_1/UNIDAD_2_JS/007_bucle_for_sencillo/index.html
@@ -22,5 +22,41 @@
         }
     }
     </script>
+    <br>
+    <br>
+    <br>
+    <script>//c) números pares del 1 al 20, imprimir en consola
+        /* primera opción:
+        for (i = 1; i <= 20; i++){
+            if (i % 2 == 0){
+                document.write(`${i}<br>`);
+            }
+        }*/
+        //opción más simple:
+        for (i = 2; i <= 20; i += 2) {
+            console.log(i);
+        }        
+    </script>
+    <br>
+    <script>//Suma de los primeros 100 números naturales
+        var suma = 0;
+        for (i=0; i <=100; i++){
+            suma +=i;// lo mismo que suma = suma + i;
+            if (i === 100) {
+                document.write(`La suma de los números es: ${suma}`);
+            }
+        }
+    </script>
+    <br>
+    <br>
+    <br>
+    <script>//imprimir triángulo
+        for (i = 4; i > 0; i--) {
+            for (j=i; j>0; j--) {
+                document.write(`*`);
+            }
+            document.write(`<br>`);
+        }
+    </script>
 </body>
 </html>
