--- a/MODULO_1/UNIDAD_2_JS/sorteo/index.html
+++ b/MODULO_1/UNIDAD_2_JS/sorteo/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sorte Javascript</title>
+    <title>Sorteo con Javascript</title>
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <div id="container">
-        <h1>Sorteo!!</h1>
-        Introduce los nombres de los concursantes: <br>
+        <h1>Sorteo de un curso de JS</h1>
+        <p>Introducir aquí los nombres de los concursantes:</p> <br>
         <input type="text" id="inputName" placeholder="Inserta un nombre">
         <button id="addBtn">Añadir concursante</button>
         <ul id="nameList"></ul>
