--- a/pruebas personales/menu restaurante/index.html
+++ b/pruebas personales/menu restaurante/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Restaurante</title>
+    <title>Restaurante DAW NASCOR</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>MENU DE NUESTRO RESTAURANTE</h1>
+        <h1>RESTAURANTE DAW NASCOR</h1>
+        <hr>
+        <h2>Nuestros Platos:</h2>
     </header>
     <nav>
         <a href="#listaEntrantes">Entrantes</a>
@@ -17,7 +19,7 @@
     </nav>
     <main>
         <div id="contenedorListas">
-            <h1>Lista de Entrantes</h1>
+            <h1>Entrantes</h1>
             <ol id="listaEntrantes">
             </ol>
         </div>
@@ -27,7 +29,7 @@
             <button id="botonEliminar" onclick="eliminarEntrante()">Eliminar Entrante</button>
         </div>
         <div id="contenedorListas">
-            <h1>Lista de Segundos</h1>
+            <h1>Segundos</h1>
             <ol id="listaSegundos">
             </ol>
         </div>
@@ -37,7 +39,7 @@
             <button id="botonEliminar" onclick="eliminarSegundo()">Eliminar Segundo</button>
         </div>
         <div id="contenedorListas">
-            <h1>Lista de Postres</h1>
+            <h1>Postres</h1>
             <ol id="listaPostres">
             </ol>
         </div>
@@ -47,6 +49,7 @@
             <button id="botonEliminar" onclick="eliminarPostre()">Eliminar Postre</button>
         </div>
     </main>
+    <footer>&copy; 2024 Creado por JlopezviaDev</footer>
     <script src="main.js"></script>
 </body>
 </html>
