--- a/actividad_2/index.html
+++ b/actividad_2/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurante</title>
+  <meta name="description" content="Menú dinámico del Restaurante DAW Nascor">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="José López Via-Dufresne">
+  <title>Restaurante DAW Nascor</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="img/rest_icon.png" />
 </head>
@@ -19,15 +22,16 @@
     <div id="entrantesContainer">
       <h2>Entrantes</h2>
       <br>
-      <!-- Botones -->
+      <!-- Botones de los Entrantes -->
       <button id="crearEntrantesBtn">Añadir Entrante</button>
       <button id="eliminarEntrantesBtn">Eliminar Entrante</button>
       <button id="seleccionarEntrantesBtn">Seleccionar Entrante</button>
       <br>
+      <!-- Lista de los Entrantes -->
       <ol id="entrantesList">
         <li>Ensalada Variada</li>
         <li>Gazpacho</li>
-        <li>Calamares</li>
+        <li>Calamares a la Romana</li>
         <!-- Aquí se añadirán más entrantes -->
       </ol>
       <br>
@@ -35,14 +39,15 @@
     <div id="principalesContainer">
       <h2>Principales</h2>
       <br>
-      <!-- Botones -->
+      <!-- Botones de los platos Principales -->
       <button id="crearPrincipalesBtn">Añadir Principal</button>
       <button id="eliminarPrincipalesBtn">Eliminar Principal</button>
       <button id="seleccionarPrincipalesBtn">Seleccionar Principal</button>
       <br>
+      <!-- Lista de los platos Principales -->
       <ol id="principalesList">
-        <li>Lenguado Meniere</li>
-        <li>Entrecote Roquefort</li>
+        <li>Lenguado a la plancha</li>
+        <li>Entrecote al Roquefort</li>
         <li>Huevos Estrellados</li>
         <!-- Aquí se añadirán más principales -->
       </ol>
@@ -51,11 +56,12 @@
     <div id="postresContainer">
       <h2>Postres</h2>
       <br>
-      <!-- Botones -->
+      <!-- Botones de los Postres -->
       <button id="crearPostresBtn">Añadir Postre</button>
       <button id="eliminarPostresBtn">Eliminar Postre</button>
       <button id="seleccionarPostresBtn">Seleccionar Postre</button>
       <br>
+      <!-- Lista de los Postres -->
       <ol id="postresList">
         <li>Tarta Tatín</li>
         <li>Tarta de Santiago</li>
@@ -67,15 +73,16 @@
       <div id="pedidoContainer">
         <h2>Platos Seleccionados:</h2>
         <br>
+        <!-- Lista de los platos seleccionados -->
         <ul id="pedidoList">
           <li id="entrante">
-
+            <!-- Aquí se añadirá el Entrante seleccionado -->
           </li>
           <li id="principal">
-
+            <!-- Aquí se añadirá el Principal seleccionado -->
           </li>
           <li id="postre">
-
+            <!-- Aquí se añadirá el Postre seleccionado -->
           </li>
         </ul>
         <button id="tramitarBoton">Tamitar Pedido</button>
