--- a/MODULO_2/actividadFormulario/alumnos.html
+++ b/MODULO_2/actividadFormulario/alumnos.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>REGISTRO GENERAL DE ALUMNOS</h1>
-    <h2>Expediente del Alumno:</h2>
+    <h2>Introducir un Alumno:</h2>
     <fieldset>
         <form action="alumnos.php" method="post">
             <table>
@@ -46,17 +46,17 @@
                         <input type="radio" id="buena" name="alumnos[actitud][]" value="buena" required>
                     </td>
                     <td>
-                        nombre ejercicio 1:
+                        Nombre ejercicio 1:
                         <br>
                         <input type="text" id="nombreEjercicio" name="alumnos[nombreEjercicio1]">
                     </td>
                     <td>
-                        nombre ejercicio 2:
+                        Nombre ejercicio 2:
                         <br>
                         <input type="text" id="nombreEjercicio" name="alumnos[nombreEjercicio2]">
                     </td>
                     <td>
-                        nombre ejercicio 3:
+                        Nombre ejercicio 3:
                         <br>
                         <input type="text" id="nombreEjercicio" name="alumnos[nombreEjercicio3]">
                     </td>
@@ -139,9 +139,3 @@
     </fieldset>    
 </body>
 </html>
-
-
-
-
-
-
